<resources>
    <string name="app_name">InventoryApp</string>
    <string name="empty_view_subtitle_text">Please add items to your List</string>
    <string name="empty_view_title_text">Seems lonely in here!!</string>
    <string name="category_overview">Overview</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_supplier">Supplier</string>
    <string name="category_quantity">Quantity</string>
    <string name="add_item">+</string>
    <string name="subtract_item">-</string>
    <string name="qty_of_each_product">Qty</string>
    <string name="unit_price">USD</string>
    <string name="action_insert_dummy_data">Insert Daily Order</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="editor_activity_title_new_product">Add New Product</string>
    <string name="editor_activity_title_edit_product">Edit Product Details</string>
    <string name="editor_insert_product_failed">Adding product failed!</string>
    <string name="editor_insert_product_successful">Product inserted successfully!</string>
    <string name="editor_update_failed">Update Failed. Please try again.</string>
    <string name="editor_update_successful">Updated Successfully!</string>
    <string name="delete_all_dialog_msg">Delete all the products?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="editor_delete_failed">Product could not be deleted.</string>
    <string name="editor_delete_successful">Product Deleted!</string>
    <string name="unsaved_changes_dialog_msg">Discard Changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="chooser_title">Order from:</string>
    <string name="unit_qty">lbs</string>
</resources>
