<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".DetailLayout">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"
                android:gravity="start" />

            <!-- Price field -->
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_weight="2"
    android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle"
                android:layout_gravity="start" />
            <TextView
                android:id="@+id/label_price_units"
                android:text="@string/unit_price"
                style="@style/EditorUnitsStyle" />
</RelativeLayout>

            <!-- Supplier field -->

            <EditText
                android:id="@+id/edit_product_supplier"
                android:hint="@string/hint_product_supplier"
                android:inputType="text"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>


    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <!-- Quantity update fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Quantity field -->
            <Button
                android:id="@+id/increase_quantity_button"
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:text="@string/add_item"
                android:inputType="number"
                android:textSize="25sp"
                style="@style/EditorFieldStyle" />

            <Button
                android:id="@+id/decrease_quantity_button"
                android:text="@string/subtract_item"
                android:layout_height="wrap_content"
                android:layout_width="70dp"
                android:textSize="25sp"
                android:layout_toRightOf="@+id/quantity_of_each_product"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/quantity_of_each_product"
                android:hint="@string/qty_of_each_product"
                android:layout_width="wrap_content"
                android:padding="@dimen/activity_margin"
                style="@style/EditorFieldStyle"
                android:layout_toRightOf="@id/increase_quantity_button"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="Image of the Product" />

        <ImageButton
            android:id="@+id/add_image_button"
            android:layout_weight="0.5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:autofillHints="Click to Add image"
            android:clickable="true"
            android:src="@drawable/ic_image_empty" />
    </LinearLayout>
    <Button
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ORDER PRODUCT"/>
    <Button
        android:id="@+id/delete_product_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DELETE PRODUCT"/>
</LinearLayout>
